# rocket-reference

./: .env  Cargo.toml  setup_env.sh
migrations/2018-03-29-132148_create_users/: up.sql
migrations/2018-04-01-013444_add_user_pass/: down.sql  up.sql
migrations/2018-05-03-032141_create_users/: up.sql
src/: db.rs  main.rs  models.rs  schema.rs  user.rs
src/forms/: create_user.rs  login.rs
src/models/: user.rs
static/: create.html
templates/: index.html.tera  login.html.tera  user.html.tera
