[package]
name = "test-web-app"
version = "0.1.0"
authors = ["Jake <jsandler18@gmail.com>"]

[dependencies]
rocket = "0.3.6"
rocket_codegen = "0.3.6"
diesel = { version = "1.0.0", features = ["postgres", "chrono"] }
dotenv = "0.9.0"
tera = "0.11.6"
frank_jwt = "3.0.0"
chrono = { version = "0.4", features = ["serde"] }
r2d2-diesel = "1.0"
r2d2 = "0.8"
serde = "1.0"
serde_derive = "1.0"


[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["tera_templates"]
